init commit of port - compiles, doesn't work properly

--- a/README
+++ b/README
@@ -1,12 +1,8 @@
-NOTE: we have stopped maintaining the x86 version of xv6, and switched
-our efforts to the RISC-V version
-(https://github.com/mit-pdos/xv6-riscv.git)
-
 xv6 is a re-implementation of Dennis Ritchie's and Ken Thompson's Unix
 Version 6 (v6).  xv6 loosely follows the structure and style of v6,
 but is implemented for a modern x86-based multiprocessor using ANSI C.
 
-ACKNOWLEDGMENTS
+# ACKNOWLEDGMENTS
 
 xv6 is inspired by John Lions's Commentary on UNIX 6th Edition (Peer
 to Peer Communications; ISBN: 1-57398-013-7; 1st edition (June 14,
@@ -37,11 +33,18 @@ Wolovick, wxdao, Grant Wu, Jindong Zhang, Icenowy Zheng, and Zou Chang Wei.
 The code in the files that constitute xv6 is
 Copyright 2006-2018 Frans Kaashoek, Robert Morris, and Russ Cox.
 
-ERROR REPORTS
+## AGGAMR'S FORK
+New code in this fork (by Aggam Rahamim) has been added - mostly ported from other projects:
 
-We don't process error reports (see note on top of this file).
+### 4.4BSD-Lite2
+Ported commands / function from [4.4BSD-Lite2]((https://github.com/dank101/4.4BSD-Lite2/))
+- getopt.c
+- cut.c
+- bsdstr.c
+- limits.h
+- errno.h
 
-BUILDING AND RUNNING XV6
+# BUILDING AND RUNNING XV6
 
 To build xv6 on an x86 ELF machine (like Linux or FreeBSD), run
 "make". On non-x86 or non-ELF machines (like OS X, even on x86), you
